--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "API yang berisikan endpoint yang akan dihit oleh CMS dan customer web",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles --forceExit --runInBand",
+    "dev": "nodemon ./bin/www",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,8 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.2.0"
+    "jest": "^26.6.3",
+    "sequelize-cli": "^6.2.0",
+    "supertest": "^6.1.3"
   }
 }
